<resources>
    <string name="app_name">My weather</string>
    <string name="text">Text</string>
    <string name="start_second_activity">Start second activity</string>
    <string name="back">Back</string>
    <string name="open_url">Open url</string>
    <string name="enter_url">Enter url</string>
    <string name="textview">TextView</string>
    <string name="city">City</string>
    <string name="select_city">select city</string>
    <string name="strong_wind"> ≈strong wind</string>
    <string name="pressure_750mm">pressure 750mm</string>
    <string name="_5">-5°C</string>
    <string name="_F">23°F</string>
    <string name="Switcher">Switch</string>
    <string name="f_c">F°/°C</string>
</resources>
