<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="948dp"
        android:layout_height="1200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/art_nebo_pejzazh_planety_zima_654" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:textColor="@color/colorWaite"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="162dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:text="@string/strong_wind"
        android:textColor="@color/colorWaite"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="192dp"
        android:layout_height="49dp"
        android:layout_marginBottom="468dp"
        android:text="@string/pressure_750mm"
        android:textColor="@color/colorWaite"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toEndOf="@+id/textView2" />



    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="243dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="244dp"
        android:text="@string/_5"
        android:textColor="@color/colorWaite"
        android:textSize="140sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="106dp"
        android:layout_height="33dp"
        android:layout_marginTop="264dp"
        android:checked="true"
        android:text="@string/f_c"
        android:textColor="@color/colorWaite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>